--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,3 +1,11 @@
 BETTER_AUTH_SECRET=your_secret_key
 BETTER_AUTH_URL=http://localhost:3000 # Base URL of your app
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/lichat
+
+
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+# GitHub OAuth
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
