--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,10 +10,12 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.4.0",
     "better-auth": "^1.4.7",
     "drizzle-orm": "^0.45.1",
     "drizzle-typebox": "^0.3.3",
     "elysia": "latest",
+    "memoirist": "^0.4.0",
     "postgres": "^3.4.7"
   },
   "devDependencies": {
