--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
+    "better-auth": "^1.4.7",
     "lucide-react": "^0.475.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
