--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -9,3 +9,6 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 # GitHub OAuth
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
+
+
+GOOGLE_GENERATIVE_AI_API_KEY=your_gemini_api_key
