--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/google": "^2.0.51",
     "@elysiajs/cors": "^1.4.0",
+    "@elysiajs/swagger": "^1.3.1",
     "ai": "^5.0.116",
     "better-auth": "^1.4.7",
     "drizzle-orm": "^0.45.1",
