--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@tanstack/react-query-devtools": "^5.91.1"
+  }
 }
